vlib/v/checker/tests/interpolation_recursive_str_err.out
vlib/v/checker/tests/interpolation_recursive_str_err.vv:8:8: error: cannot call `str()` method recursively
    6 |
    7 | fn (t Test) str() string {
    8 |     _ = '$t'
      |           ^
    9 |     return 'test'
   10 | }
