vlib/v/checker/tests/interpolation_recursive_str_err.vv
module main

struct Test {
	a int
}

fn (t Test) str() string {
	_ = '$t'
	return 'test'
}

fn main() {
	a := Test{}
	println(a)
}
